Improvied code readability
- some more cooments
- code separation into files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<body>
 		<canvas id="gc" width="100" height="100"></canvas>
 		<p id="test"></p>
-		<script src = "simulation.js"> </script>
+		<script src = "JS/updating_cells.js"> </script>
+		<script src = "JS/simulation.js"> </script>
+		<script src = "JS/drawing_tools.js"> </script>
+		<script src = "JS/input_events.js"> </script>
+		<script src = "main.js"> </script>
 	</body>
 </html>
