All buttons are done
- finished functionality of "back to 1 generation" button
- finished functionality of "undo" and "redo" button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						and observing how it evolves. It is Turingcomplete and can simulate a universal
 						constructor or any other Turing machine." </br>
 						<div style = "text-align: right;"><a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank" title="Wikipedia: game of life">Wikipedia</a></div>
-						<p>The game takes place on an infinite board divided into square cells. Cells can be "alive" or "dead".("1" or "0" - white or black).
+						<p>The game takes place on an infinite board divided into square cells. Cells can be "alive" or "dead"("1" or "0" - white or black).
 						Succesive generations are succesive moments of time. There are 2 rules of calculating next generation: </br>
 						- "dead" cell which has exacly 3 "alived" neighbors, becomes "alived".</br>
 						- "alived" cell with 2 or 3 "alived" neighbors stays "alived"; in another case cell dies.</p>
