--- a/index.html
+++ b/index.html
@@ -40,29 +40,36 @@
 				</div>
 				<div id = "div_top_body">
 					<div id = "div_parameters">
-						div_parameters
+						Width of board [cells]: <input type="text" id="inputText_x_cells" name="width of board [cells]"> (current: <a id="p_cx">80</a>)</br></br>
+						Height of board [cells]: <input type="text" id="inputText_y_cells" name="height of board [cells]"> (current: <a id="p_cy">80</a>)</br></br>
+						Cell width [pixels]: <input type="text" id="inputText_cell_dim" name="cell dimension [pixels]"> (current: <a id="p_cd">10</a>)</br></br>
+						You will get canvas dimensions: width = <a id="a_w">800</a>, height = <a id="a_h">800</a></br></br>
+						<a href = "javascript:button_submit();" id = "button_image">
+							<img src="img/icon_submit.png" title="submit">
+						</a>
 					</div>
 					<div id = "div_tools">
+						</br></br></br>
 						<a href = "javascript:button_undo();" id = "button_undo">
-							<img src="img/icon_undo.png" title="undo">
+							<img src="img/icon_undo.png" title="undo (max to 30 actions) [ctrl+Z]">
 						</a>
 						<a href = "javascript:button_redo();" id = "button_redo">
-							<img src="img/icon_redo.png" title="redo">
+							<img src="img/icon_redo.png" title="redo [ctrl+Y]">
 						</a>
 						<a href = "javascript:button_start();" id = "button_start_stop">
-							<img src="img/icon_start.png" title="start" id = "image_start_stop">
+							<img src="img/icon_start.png" title="start [S]" id = "image_start_stop">
 						</a>
 						<a href = "javascript:button_speedDown();" id = "button_image">
-							<img src="img/icon_speedDown.png" title="speed up">
+							<img src="img/icon_speedDown.png" title="speed down [Q]">
 						</a>
 						<a href = "javascript:button_speedUp();" id = "button_image">
-							<img src="img/icon_speedUp.png" title="speed down">
+							<img src="img/icon_speedUp.png" title="speed up [E]">
 						</a>
 						<a href = "javascript:button_backTo1Gen();" id = "button_image">
-							<img src="img/icon_backTo1Gen.png" title="go back to first generation">
+							<img src="img/icon_backTo1Gen.png" title="go back to first generation [R]">
 						</a>
 						<a href = "javascript:button_clear();" id = "button_image">
-							<img src="img/icon_clear.png" title="clear board and start from first generation">
+							<img src="img/icon_clear.png" title="clear board and start from first generation [C]">
 						</a>
 						<p id="p_start_status">Simulation stopped</p>
 						<p id="p_speed">Speed: 99999</p>
