--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						constructor or any other Turing machine." </br>
 						<div style = "text-align: right;"><a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank" title="Wikipedia: game of life">Wikipedia</a></div>
 						<p>The game takes place on an infinite board divided into square cells. Cells can be "alive" or "dead"("1" or "0" - white or black).
-						Succesive generations are succesive moments of time. There are 2 rules of calculating next generation: </br>
+						Succesive generations are moments of time. There are 2 rules of calculating next generation: </br>
 						- "dead" cell which has exacly 3 "alived" neighbors, becomes "alived".</br>
 						- "alived" cell with 2 or 3 "alived" neighbors stays "alived"; in another case cell dies.</p>
 					</div>
@@ -73,6 +73,7 @@
 						</a>
 						<p id="p_start_status">Simulation stopped</p>
 						<p id="p_speed">Speed: 99999</p>
+						<p id="p_generation">Generation = 1</p>
 					</div>
 					<div style="clear: both;"></div>
 				</div>
