--- a/index.html
+++ b/index.html
@@ -40,46 +40,46 @@
 				</div>
 				<div id = "div_top_body">
 					<div id = "div_parameters">
-						Width of board [cells]: <input type="text" id="inputText_x_cells" name="width of board [cells]"> (current: <a id="p_cx">80</a>)</br></br>
-						Height of board [cells]: <input type="text" id="inputText_y_cells" name="height of board [cells]"> (current: <a id="p_cy">80</a>)</br></br>
-						Cell width [pixels]: <input type="text" id="inputText_cell_dim" name="cell dimension [pixels]"> (current: <a id="p_cd">10</a>)</br></br>
-						You will get canvas dimensions: width = <a id="a_w">800</a>, height = <a id="a_h">800</a></br></br>
-						<a href = "javascript:button_submit();" id = "button_image">
+						Width of board [cells]: <input type="text" id="input_x_cells"> (current: <a id="a_current_cells_x">80</a>)</br></br>
+						Height of board [cells]: <input type="text" id="input_y_cells"> (current: <a id="a_current_cells_y">80</a>)</br></br>
+						Cell width [pixels]: <input type="text" id="input_cell_width"> (current: <a id="a_current_cell_width">10</a>)</br></br>
+						You will get canvas dimensions: width = <a id="a_cell_width">800</a>, height = <a id="a_cell_height">800</a></br></br>
+						<a href = "javascript:button_submit();" class = "button_image">
 							<img src="img/icon_submit.png" title="submit">
 						</a>
 					</div>
 					<div id = "div_tools">
 						</br></br></br>
-						<a href = "javascript:button_undo();" id = "button_undo">
+						<a href = "javascript:button_undo();" class = "button_image" id = "button_undo">
 							<img src="img/icon_undo.png" title="undo (max to 30 actions) [ctrl+Z]">
 						</a>
-						<a href = "javascript:button_redo();" id = "button_redo">
+						<a href = "javascript:button_redo();" class = "button_image" id = "button_redo">
 							<img src="img/icon_redo.png" title="redo [ctrl+Y]">
 						</a>
-						<a href = "javascript:button_start();" id = "button_start_stop">
+						<a href = "javascript:button_start();" class = "button_image" id = "button_start_stop">
 							<img src="img/icon_start.png" title="start [S]" id = "image_start_stop">
 						</a>
-						<a href = "javascript:button_speedDown();" id = "button_image">
+						<a href = "javascript:button_speedDown();" class = "button_image">
 							<img src="img/icon_speedDown.png" title="speed down [Q]">
 						</a>
-						<a href = "javascript:button_speedUp();" id = "button_image">
+						<a href = "javascript:button_speedUp();" class = "button_image">
 							<img src="img/icon_speedUp.png" title="speed up [E]">
 						</a>
-						<a href = "javascript:button_backTo1Gen();" id = "button_image">
+						<a href = "javascript:button_backTo1Gen();" class = "button_image">
 							<img src="img/icon_backTo1Gen.png" title="go back to first generation [R]">
 						</a>
-						<a href = "javascript:button_clear();" id = "button_image">
+						<a href = "javascript:button_clear();" class = "button_image">
 							<img src="img/icon_clear.png" title="clear board and start from first generation [C]">
 						</a>
-						<p id="p_start_status">Simulation stopped</p>
-						<p id="p_speed">Speed: 99999</p>
-						<p id="p_generation">Generation = 1</p>
+						<p class="p_simulation_informations" id="p_start_status">Simulation stopped</p>
+						<p class="p_simulation_informations" id="p_speed">Speed: 99999</p>
+						<p class="p_simulation_informations" id="p_generation">Generation = 1</p>
 					</div>
 					<div style="clear: both;"></div>
 				</div>
 			</div>
 			<div id = "div_canvas">
-				<canvas id="canv" width="100" height="100"></canvas>
+				<canvas id="canv"></canvas>
 			</div>
 		</div>
 	</body>
